# py-starter

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
src/py_starter/: __init__.py  __main__.py  math_utils.py
tests/: test_math_utils.py
