[project]
name = "py-starter"
version = "0.1.0"
description = "A minimal, modern Python starter — uv + ruff + pytest + mypy"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.scripts]
py-starter = "py_starter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_starter"]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pep8-naming, pyupgrade, bugbear, simplify, ruff
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
